@@ -122,6 +122,8 @@ namespace Pds {
       Id_JungfrauConfig,
       Id_JungfrauElement,
       Id_QuadAdcConfig,
+      Id_ZylaConfig,
+      Id_ZylaFrame,
       NumberOf};
     enum { VCompressed = 0x8000 };
 
