@@ -91,6 +91,7 @@ bool     TypeId::is_configuration() const
       Id_ArchonConfig,
       Id_JungfrauConfig,
       Id_QuadAdcConfig,
+      Id_ZylaConfig,
     };
   const unsigned nconfigtypes = sizeof(_configuration_types)/sizeof(Type);
   Type t = id();
@@ -213,6 +214,8 @@ const char* TypeId::name(Type type)
     "JungfrauConfig",          // 107
     "JungfrauElement",         // 108
     "QuadAdcConfig",           // 109
+    "ZylaConfig",              // 110
+    "ZylaFrame",               // 111
   };
    const char* p = (type < NumberOf ? _names[type] : "-Invalid-");
    if (!p) p = "-Unnamed-";
